--- a/imagen/debian/control
+++ b/imagen/debian/control
@@ -1,7 +1,7 @@
 Source: cubicweb-imagen-upload
 Section: web
 Priority: optional
-Maintainer: David Goyard <imagendatabase@cea.fr>
+Maintainer: Antoine Grigis <imagendatabase@cea.fr>
 Build-Depends:
  debhelper (>= 7),
  python (>= 2.6.5),
